Fix typo in job responsibilities

--- a/data/jobs.yml
+++ b/data/jobs.yml
@@ -65,7 +65,7 @@
             Re-wrote a Python script as a PHP Composer package, with
             100% unit test coverage
         - |
-            Liased with client via e-mail and Skype instant messaging
+            Liaised with client via e-mail and Skype instant messaging
         - |
             Received extremely positive feedback and was awarded a
             bonus for outperforming the client's expectations
