Use Hydeout layout

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: bradfeehan
 github_username:  bradfeehan
 
 # Build settings
-theme: minima
+theme: jekyll-theme-hydeout
 plugins:
   - jekyll-feed
 
