--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,6 +11,27 @@ permissions:
   contents: read
 
 jobs:
+  actionlint:
+    name: GitHub Actions
+    runs-on: ubuntu-latest
+    env:
+      REPO: https://github.com/rhysd/actionlint
+      VERSION: 1.6.13
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup actionlint
+        run: |
+          set -euo pipefail && \
+          echo "::add-matcher::.github/matchers/actionlint.json" && \
+          echo "Downloading '${REPO}/releases/download/v${VERSION}/actionlint_${VERSION}_linux_amd64.tar.gz'..."
+          curl -L "${REPO}/releases/download/v${VERSION}/actionlint_${VERSION}_linux_amd64.tar.gz" \
+          | tar xz -C '/usr/local/bin' && \
+          echo "actionlint -version:" &&
+          actionlint -version
+
+      - run: actionlint -color
+
   markdown-link-check:
     name: Markdown URLs
     runs-on: ubuntu-latest
