--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Brad Feehan
 email: contact@bradfeehan.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Brad Feehan: Infrastructure Engineer / DevOps Engineer / Software Engineer in Melbourne, Australia
+  Brad Feehan: Senior Site Reliability DevOps Infrastructure Engineer Extraordinaire in Melbourne, Australia, seeking new opportunities
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://bradfeehan.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: bradfeehan
